--- a/panoptic_mapping_ros/config/mapper/college_mono.yaml
+++ b/panoptic_mapping_ros/config/mapper/college_mono.yaml
@@ -10,10 +10,10 @@ use_transform_caching: true
 use_tf_transforms: true
 transform_lookup_time: 0.1
 global_frame_name: world
-visualization_interval: -1.0
+visualization_interval: -5.0
 data_logging_interval: 0.0
 print_timing_interval: -1.0
-esdf_update_interval: -5.0 # 
+esdf_update_interval: 0.0 # 
 max_input_queue_length: 1000
 ros_spinning_threads: 8
 
@@ -36,10 +36,11 @@ id_tracker:
   use_class_layer: false
   use_instance_classification: false
   use_color: false
+  integration_threads: 1 # slower, but can avoid SegFault
 
   # map allocator
-  voxel_size: 0.35
-  truncation_distance: -6
+  voxel_size: 0.2
+  truncation_distance: -3
   voxels_per_side: 16
 
   # freespace esdf mapping
@@ -65,11 +66,12 @@ tsdf_integrator:  # different from those in voxblox
 
   # Common
   apply_normal_refine_freespace: *use_normal
+  behind_surface_reliable_band: true
   reliable_band_ratio: 3.0
-  reliable_normal_ratio_thre: 0.01
+  reliable_normal_ratio_thre: 0.1
   use_weight_dropoff: true
   weight_dropoff_epsilon: -1.0 #if negative, means -k * voxel_size
-  weight_reduction: false
+  weight_reduction: true
   weight_reduction_exp: 2.0
   max_weight: 10000
 
@@ -79,9 +81,10 @@ tsdf_integrator:  # different from those in voxblox
   # Raycasting
   merged_raycasting: true # use "merged" raycast or not
   free_space_multi_threads: true # use multi-thread raycasting for the freespace submap independently
+  freespace_carving_enabled: true
   max_ray_length_m: *max_range
   min_ray_length_m: *min_range
-  freespace_carving_enabled: true
+  
 
 visualization:  
   submaps:
