--- a/panoptic_mapping_ros/config/mapper/flat_mono.yaml
+++ b/panoptic_mapping_ros/config/mapper/flat_mono.yaml
@@ -4,12 +4,13 @@ verbosity: 4
 input_from_bag: false
 use_lidar: &use_lidar false 
 use_range_image: &use_range_image true
-estimate_normal: &use_normal true
+estimate_normal: &use_normal false
 use_threadsafe_submap_collection: false
 use_transform_caching: true
-transform_lookup_time: 0.1
+use_tf_transforms: false
+transform_lookup_time: 0.5
 global_frame_name: world
-visualization_interval: -5.0
+visualization_interval: -1.0
 data_logging_interval: 0.0
 print_timing_interval: -1.0
 esdf_update_interval: -5.0
@@ -19,7 +20,7 @@ ros_spinning_threads: 8
 # Use CSV label handler
 labels:
   type: csv
-  file_name: /media/yuepan/SeagateNew/1_data/thesis_dataset/flat_dataset/groundtruth_labels.csv
+  file_name: /media/yuepan/SeagateNew/1_data/flat_dataset/groundtruth_labels.csv
 
 camera:
   verbosity: 1
@@ -31,7 +32,7 @@ camera:
   fy: 320
   max_range: &max_range 5  # m
   min_range: &min_range 0.1
-  smooth_thre_m: 0.05 # m
+  smooth_thre_ratio: 0.05 
 
 id_tracker:
   type: single_tsdf
@@ -43,7 +44,7 @@ id_tracker:
   use_instance_classification: false
 
   # map allocator
-  voxel_size: 0.1
+  voxel_size: 0.25
   truncation_distance: -2
   voxels_per_side: 16
 
@@ -54,7 +55,7 @@ id_tracker:
   finer_esdf_on: true
   fixed_band_esdf_on: false
   occ_voxel_size_ratio: &occ_voxel_size_ratio 0.866
-  gradient_sign: -1.0
+  gradient_sign: 1.0
   fixed_band_ratio: 2.0
   esdf_max_distance_m: 2.0
   esdf_local_offset_x: 30
@@ -85,9 +86,10 @@ tsdf_integrator:  # different from those in voxblox
   # Raycasting
   merged_raycasting: true # use "merged" raycast or not
   free_space_multi_threads: true # use multi-thread raycasting for the freespace submap independently
+  freespace_carving_enabled: true
   max_ray_length_m: *max_range
   min_ray_length_m: *min_range
-  freespace_carving_enabled: true
+  
   
 visualization:  
   submaps:
