--- a/panoptic_mapping_ros/config/mapper/kitti_mono.yaml
+++ b/panoptic_mapping_ros/config/mapper/kitti_mono.yaml
@@ -12,10 +12,10 @@ use_transform_caching: true
 use_tf_transforms: true
 transform_lookup_time: 0.1
 global_frame_name: world
-visualization_interval: -1.0
+visualization_interval: -5.0
 data_logging_interval: 0.0
 print_timing_interval: -1.0
-esdf_update_interval: -5.0 # 
+esdf_update_interval: 0.0 # 
 max_input_queue_length: 1000
 ros_spinning_threads: 8
 
@@ -38,10 +38,11 @@ id_tracker:
   use_range_image: *use_range_image
   use_class_layer: false
   use_instance_classification: false
+  integration_threads: 1 # slower, but can avoid SegFault
 
   # map allocator
-  voxel_size: 0.5
-  truncation_distance: -2
+  voxel_size: 0.25
+  truncation_distance: -3
   voxels_per_side: 16
 
   # freespace esdf mapping
@@ -49,10 +50,14 @@ id_tracker:
   esdf_fiesta_patch: true
   esdf_fiesta_break: false
   finer_esdf_on: true
+  fixed_band_esdf_on: false
+  occ_voxel_size_ratio: &occ_voxel_size_ratio 0.866
+  fixed_band_ratio: 2.0
+  gradient_sign: 1.0
   esdf_max_distance_m: 6.0
-  esdf_local_offset_x: 30
-  esdf_local_offset_y: 30
-  esdf_local_offset_z: 5
+  esdf_local_offset_x: 50
+  esdf_local_offset_y: 50
+  esdf_local_offset_z: 10
 
 tsdf_integrator:  # different from those in voxblox
   # select from class_projective, class_raycast, class_adaptive, projective, raycast, adaptive, single_projective
@@ -66,11 +71,12 @@ tsdf_integrator:  # different from those in voxblox
 
   # Common
   apply_normal_refine_freespace: *use_normal
+  behind_surface_reliable_band: true
   reliable_band_ratio: 2.0
   reliable_normal_ratio_thre: 0.1
   use_weight_dropoff: true
   weight_dropoff_epsilon: -1.0 #if negative, means -k * voxel_size
-  weight_reduction: false
+  weight_reduction: true
   weight_reduction_exp: 2.0
   max_weight: 10000
 
@@ -80,9 +86,9 @@ tsdf_integrator:  # different from those in voxblox
   # Raycasting
   merged_raycasting: true # use "merged" raycast or not
   free_space_multi_threads: true # use multi-thread raycasting for the freespace submap independently
+  freespace_carving_enabled: true # if true, slower but more accurate
   max_ray_length_m: *max_range
   min_ray_length_m: *min_range
-  freespace_carving_enabled: true
 
 visualization:  
   submaps:
@@ -93,7 +99,7 @@ visualization:
     submap_color_discretization: 30 # be same as the image's
     visualize_mesh: true
     visualize_tsdf_blocks: true
-    visualize_occ_voxels: false
+    visualize_occ_voxels: true
     visualize_slice: true
     visualize_free_space_tsdf: true
     visualize_free_space_esdf: true
