--- a/panoptic_mapping_utils/config/evaluate_config.yaml
+++ b/panoptic_mapping_utils/config/evaluate_config.yaml
@@ -1,19 +1,30 @@
 # TODO: better to merge esdf map into the panmap file
 
 # cow & lady dataset
-# ground_truth_pointcloud_file: /media/yuepan/SeagateNew/1_data/thesis_dataset/cow_lady_gt/cow_and_lady_gt.ply
-# map_file: /media/yuepan/SeagateNew/1_data/thesis_dataset/cow_dataset/results/mono_5cm_proj.panmap
-# esdf_file_path: /media/yuepan/SeagateNew/1_data/thesis_dataset/cow_dataset/results/mono_5cm_voxblox_proj.esdf
+# ground_truth_pointcloud_file: /media/yuepan/SeagateNew/1_data/cow_dataset/cow_and_lady_gt.ply
+# map_file: /media/yuepan/SeagateNew/1_data/cow_dataset/results/mono_5cm_proj.panmap
+# esdf_file_path: /media/yuepan/SeagateNew/1_data/cow_dataset/results/mono_5cm_voxblox_proj.esdf
 
 # flat dataset
-# ground_truth_pointcloud_file: /media/yuepan/SeagateNew/1_data/thesis_dataset/flat_dataset/flat_1_gt_10000.ply
-# map_file: /media/yuepan/SeagateNew/1_data/thesis_dataset/flat_dataset/results/mono_10cm_normal_test.panmap
-# esdf_file_path: /media/yuepan/SeagateNew/1_data/thesis_dataset/flat_dataset/results/mono_10cm_voxfield_refine_test.esdf
+# ground_truth_pointcloud_file: /media/yuepan/SeagateNew/1_data/flat_dataset/flat_1_gt_10000.ply
+# map_file: /media/yuepan/SeagateNew/1_data/flat_dataset/results/mono_25cm_merged_nonormal.panmap
+# esdf_file_path: /media/yuepan/SeagateNew/1_data/flat_dataset/results/mono_25cm_voxfield_noband.esdf
 
 # mai city dataset
-ground_truth_pointcloud_file: /media/yuepan/SeagateNew/1_data/mai_city/gt_models/merged_gt_map.ply
-map_file: /media/yuepan/SeagateNew/1_data/mai_city/results/mono_40cm_merged_nonormal_test01.panmap
-esdf_file_path: /media/yuepan/SeagateNew/1_data/mai_city/results/mono_40cm_voxblox.esdf
+# ground_truth_pointcloud_file: /media/yuepan/SeagateNew/1_data/mai_city/gt_models/merged_gt_map.ply
+# map_file: /media/yuepan/SeagateNew/1_data/mai_city/results/mono_40cm_merged_nonormal_test01.panmap
+# esdf_file_path: /media/yuepan/SeagateNew/1_data/mai_city/results/mono_40cm_voxblox.esdf
+
+# kitti dataset seq 07
+ground_truth_pointcloud_file: /media/yuepan/SeagateNew/1_data/kitti/gt_map/merged_gt_map_kitti_07.ply
+map_file: /media/yuepan/SeagateNew/1_data/kitti/results/mono_25cm_merged_normal2.panmap
+esdf_file_path: /media/yuepan/SeagateNew/1_data/kitti/results/mono_35cm_fiesta.esdf
+
+# newer college dataset
+# ground_truth_pointcloud_file: /media/yuepan/SeagateNew/1_data/NewerCollege/2020-ouster-os1-64-realsense/gt_map/part1_filtered_map.ply
+# map_file: /media/yuepan/SeagateNew/1_data/NewerCollege/results/
+# esdf_file_path: /media/yuepan/SeagateNew/1_data/NewerCollege/results/
+
 
 verbosity: 2
 trunc_dist: -2.0
@@ -23,5 +34,5 @@ is_single_tsdf: true
 include_all_submaps: true
 use_chamfer_dist: true
 visualize_esdf_error: true
-vis_occ_esdf_error: true
+vis_occ_esdf_error: false
 
