--- a/panoptic_mapping_ros/config/mapper/kitti_mono.yaml
+++ b/panoptic_mapping_ros/config/mapper/kitti_mono.yaml
@@ -6,7 +6,7 @@ use_lidar: &use_lidar true
 filter_moving_objects: true
 use_panoptic_color: true # use semantic (false) or panoptic (true) color for the map visualization
 use_range_image: &use_range_image true
-estimate_normal: &use_normal true
+estimate_normal: &use_normal false
 use_threadsafe_submap_collection: false
 use_transform_caching: true
 use_tf_transforms: true
@@ -18,6 +18,9 @@ print_timing_interval: -1.0
 esdf_update_interval: 0.0 # 
 max_input_queue_length: 1000
 ros_spinning_threads: 8
+
+
+## TODO: exsiting bug: Accessed unallocated block at xx xx xx
 
 lidar: # velodyne-64
   verbosity: 1
@@ -41,7 +44,7 @@ id_tracker:
   integration_threads: 1 # slower, but can avoid SegFault
 
   # map allocator
-  voxel_size: 0.25
+  voxel_size: 0.15
   truncation_distance: -3
   voxels_per_side: 16
 
